--- a/res/layout/account.xml
+++ b/res/layout/account.xml
@@ -4,7 +4,7 @@
 
   <TextView
     style="@style/TextTitle"
-    android:text="@string/title_connect" />
+    android:text="@string/sync_title_connect" />
 
   <View
     android:layout_height="2dp"
@@ -12,29 +12,29 @@
 
   <TextView
     style="@style/TextItem"
-    android:text="@string/subtitle_account" />
+    android:text="@string/sync_subtitle_account" />
 
   <EditText android:id="@+id/username"
     style="@style/EditItem"
-    android:hint="@string/input_username" />
+    android:hint="@string/sync_input_username" />
 
   <EditText android:id="@+id/password"
     style="@style/EditItem"
     android:password="true"
-    android:hint="@string/input_password" />
+    android:hint="@string/sync_input_password" />
 
   <EditText android:id="@+id/key"
     style="@style/EditItem"
-    android:hint="@string/input_key" />
+    android:hint="@string/sync_input_key" />
 
   <CheckBox android:id="@+id/checkbox_server"
-    android:text="@string/checkbox_server" />
+    android:text="@string/sync_checkbox_server" />
 
   <EditText android:id="@+id/server"
     style="@style/EditItem"
     android:editable="false"
     android:cursorVisible="false"
-    android:hint="@string/input_server" />
+    android:hint="@string/sync_input_server" />
 
   <LinearLayout
     android:layout_width="fill_parent"
@@ -44,12 +44,12 @@
     <Button
       style="@style/ButtonCommon"
       android:onClick="cancelClickHandler"
-      android:text="@string/button_cancel" />
+      android:text="@string/sync_button_cancel" />
 
     <Button
       style="@style/ButtonCommon"
       android:onClick="connectClickHandler"
-      android:text="@string/button_connect" />
+      android:text="@string/sync_button_connect" />
 
   </LinearLayout>
 
