--- a/res/layout/failure.xml
+++ b/res/layout/failure.xml
@@ -3,14 +3,14 @@
     style="@style/TextFrame" >
     <TextView
       style="@style/TextTitle"
-      android:text="@string/title_fail" />
+      android:text="@string/sync_title_fail" />
     <View 
       android:layout_width="fill_parent"
       android:layout_height="2dp"
       android:background="#FFFFFF"/>
     <TextView
       style="@style/TextItem"
-      android:text="@string/subtitle_fail" />
+      android:text="@string/sync_subtitle_fail" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -24,19 +24,19 @@
 
             <Button
                 style="@style/ButtonCommon"
-                android:text="@string/button_tryagain"
+                android:text="@string/sync_button_tryagain"
                 android:onClick="tryAgainClickHandler" />
 
             <Button
                 style="@style/ButtonCommon"
                 android:onClick="manualClickHandler"
-                android:text="@string/button_manual" />
+                android:text="@string/sync_button_manual" />
         </LinearLayout>
 
         <Button
             style="@style/ButtonCommon"
             android:onClick="cancelClickHandler"
-            android:text="@string/button_cancel" />
+            android:text="@string/sync_button_cancel" />
     </LinearLayout>
 
 </TableLayout>
