--- a/res/layout/setup.xml
+++ b/res/layout/setup.xml
@@ -4,7 +4,7 @@
 
   <TextView android:id="@+id/setup_title"
     style="@style/TextTitle"
-    android:text="@string/title_connect" />
+    android:text="@string/sync_title_connect" />
 
   <View
     android:layout_width="wrap_content"
@@ -13,13 +13,13 @@
 
   <TextView android:id="@+id/setup_subtitle"
     style="@style/TextItem"
-    android:text="@string/subtitle_connect" />
+    android:text="@string/sync_subtitle_connect" />
 
   <TextView
     style="@style/TextItem"
     android:autoLink="web"
     android:clickable="true"
-    android:text="@string/link_show" />
+    android:text="@string/sync_link_show" />
 
   <LinearLayout
     style="@style/TextItem"
@@ -27,7 +27,7 @@
 
     <TextView android:id="@+id/text_pin"
       style="@style/TextItem"
-      android:text="@string/pin_default"
+      android:text="@string/sync_pin_default"
       android:textSize="40dp" />
 
   </LinearLayout>
@@ -36,7 +36,7 @@
     style="@style/TextItem"
     android:clickable="true"
     android:onClick="manualClickHandler"
-    android:text="@string/link_nodevice" />
+    android:text="@string/sync_link_nodevice" />
 
   <LinearLayout
     android:layout_width="wrap_content"
@@ -47,7 +47,7 @@
     <Button
       style="@style/ButtonCommon"
       android:onClick="cancelClickHandler"
-      android:text="@string/button_cancel" />
+      android:text="@string/sync_button_cancel" />
 
   </LinearLayout>
 
