--- a/res/layout/success.xml
+++ b/res/layout/success.xml
@@ -3,7 +3,7 @@
     style="@style/TextFrame" >
     <TextView
         style="@style/TextTitle"
-        android:text="@string/title_success" />
+        android:text="@string/sync_title_success" />
     <View
         android:layout_width="fill_parent"
         android:layout_height="2dp"
@@ -14,11 +14,11 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:padding="20dp"
-        android:text="@string/subtitle_success" />
+        android:text="@string/sync_subtitle_success" />
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:onClick="settingsClickHandler"
-        android:text="@string/settings" />
+        android:text="@string/sync_settings" />
 </TableLayout>
