--- a/res/xml/authenticator.xml
+++ b/res/xml/authenticator.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <account-authenticator xmlns:android="http://schemas.android.com/apk/res/android"
     android:accountType="account.type.sync"
-    android:icon="@drawable/icon"
-    android:smallIcon="@drawable/icon"
-    android:label="@string/account_label" />
+    android:icon="@drawable/sync_icon"
+    android:smallIcon="@drawable/sync_icon"
+    android:label="@string/sync_account_label" />
