--- a/res/layout/sync_account.xml
+++ b/res/layout/sync_account.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  style="@style/TextFrame" >
+  style="@style/SyncTextFrame" >
 
   <TextView
-    style="@style/TextTitle"
+    style="@style/SyncTextTitle"
     android:text="@string/sync_title_connect" />
 
   <View
@@ -11,27 +11,27 @@
     android:background="#FFFFFF" />
 
   <TextView
-    style="@style/TextItem"
+    style="@style/SyncTextItem"
     android:text="@string/sync_subtitle_account" />
 
   <EditText android:id="@+id/username"
-    style="@style/EditItem"
+    style="@style/SyncEditItem"
     android:hint="@string/sync_input_username" />
 
   <EditText android:id="@+id/password"
-    style="@style/EditItem"
+    style="@style/SyncEditItem"
     android:password="true"
     android:hint="@string/sync_input_password" />
 
   <EditText android:id="@+id/key"
-    style="@style/EditItem"
+    style="@style/SyncEditItem"
     android:hint="@string/sync_input_key" />
 
   <CheckBox android:id="@+id/checkbox_server"
     android:text="@string/sync_checkbox_server" />
 
   <EditText android:id="@+id/server"
-    style="@style/EditItem"
+    style="@style/SyncEditItem"
     android:editable="false"
     android:cursorVisible="false"
     android:hint="@string/sync_input_server" />
@@ -42,12 +42,12 @@
     android:orientation="horizontal" >
 
     <Button
-      style="@style/ButtonCommon"
+      style="@style/SyncButtonCommon"
       android:onClick="cancelClickHandler"
       android:text="@string/sync_button_cancel" />
 
     <Button
-      style="@style/ButtonCommon"
+      style="@style/SyncButtonCommon"
       android:onClick="connectClickHandler"
       android:text="@string/sync_button_connect" />
 
