--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
   <!-- TextView Styles -->
-  <style name="TextFrame" parent="@android:style/TextAppearance">
+  <style name="SyncTextFrame" parent="@android:style/TextAppearance">
     <item name="android:layout_width">wrap_content</item>
     <item name="android:layout_height">fill_parent</item>
     <item name="android:padding">20dp</item>
@@ -9,24 +9,24 @@
     <item name="android:background">#82818A</item>
     <item name="android:orientation">vertical</item>
   </style>
-  <style name="TextItem" parent="@android:style/TextAppearance.Medium">
+  <style name="SyncTextItem" parent="@android:style/TextAppearance.Medium">
     <item name="android:gravity">center</item>
     <item name="android:layout_gravity">center_vertical</item>
     <item name="android:layout_height">wrap_content</item>
     <item name="android:layout_width">fill_parent</item>
     <item name="android:textSize">15dp</item>
   </style>
-  <style name="TextTitle" parent="@style/TextItem">
+  <style name="SyncTextTitle" parent="@style/TextItem">
     <item name="android:textSize">20dp</item>
     <item name="android:gravity">center</item>
   </style>
   <!-- EditView Styles -->
-  <style name="EditItem" parent="@android:style/Widget.EditText">
+  <style name="SyncEditItem" parent="@android:style/Widget.EditText">
     <item name="android:layout_height">wrap_content</item>
     <item name="android:layout_width">fill_parent</item>
     <item name="android:singleLine">true</item>
   </style>
-  <style name="ButtonCommon">
+  <style name="SyncButtonCommon">
     <item name="android:layout_height">wrap_content</item>
     <item name="android:layout_width">wrap_content</item>
   </style>
