--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -16,7 +16,7 @@
     <item name="android:layout_width">fill_parent</item>
     <item name="android:textSize">15dp</item>
   </style>
-  <style name="SyncTextTitle" parent="@style/TextItem">
+  <style name="SyncTextTitle" parent="@style/SyncTextItem">
     <item name="android:textSize">20dp</item>
     <item name="android:gravity">center</item>
   </style>
