--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -19,6 +19,7 @@
   <style name="SyncTextTitle" parent="@style/SyncTextItem">
     <item name="android:textSize">20dp</item>
     <item name="android:gravity">center</item>
+    <item name="android:paddingBottom">10dp</item>
   </style>
   <!-- EditView Styles -->
   <style name="SyncEditItem" parent="@android:style/Widget.EditText">
