--- a/res/xml/sync_syncadapter.xml
+++ b/res/xml/sync_syncadapter.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <sync-adapter xmlns:android="http://schemas.android.com/apk/res/android"
     android:contentAuthority="org.mozilla.gecko.db.browser"
-    android:accountType="account.type.sync"
+    android:accountType="org.mozilla.gecko.sync.account"
     android:supportsUploading="true"
     android:userVisible="true"
 />
