--- a/res/values/sync_styles.xml
+++ b/res/values/sync_styles.xml
@@ -27,6 +27,13 @@
     <item name="android:layout_width">fill_parent</item>
     <item name="android:singleLine">true</item>
   </style>
+  <style name="SyncEditPin" parent="@style/SyncEditItem">
+    <item name="android:gravity">center_horizontal</item>
+    <item name="android:layout_width">wrap_content</item>
+    <item name="android:ems">4</item>
+    <item name="android:maxLength">4</item>
+    <item name="android:imeOptions">actionNext</item>
+  </style>
   <style name="SyncButtonCommon">
     <item name="android:layout_height">wrap_content</item>
     <item name="android:layout_width">wrap_content</item>
