Spacing on "Waiting for other device" screen.

--- a/res/layout/sync_setup_jpake_waiting.xml
+++ b/res/layout/sync_setup_jpake_waiting.xml
@@ -12,7 +12,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@android:style/Widget.ProgressBar.Horizontal"
-        android:indeterminateOnly="true" />
+        android:indeterminateOnly="true"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp" />
     <TextView
         style="@style/SyncTextItem"
         android:text="@string/sync_jpake_subtitle_waiting" />
