--- a/res/layout/sync_setup_success.xml
+++ b/res/layout/sync_setup_success.xml
@@ -23,10 +23,11 @@
         android:onClick="settingsClickHandler"
         android:text="@string/sync_settings" />
 
-    <TextView android:id="@+id/link_pair"
-    style="@style/SyncTextItem"
-    android:clickable="true"
-    android:onClick="pairClickHandler"
-    android:text="@string/sync_title_pair" />
+    <TextView
+        android:id="@+id/link_pair"
+        style="@style/SyncTextItem"
+        android:clickable="true"
+        android:onClick="pairClickHandler"
+        android:text="@string/sync_title_pair" />
 
 </TableLayout>
