--- a/res/layout/sync_setup_pair.xml
+++ b/res/layout/sync_setup_pair.xml
@@ -15,8 +15,8 @@
     <TextView
         android:id="@+id/setup_subtitle"
         style="@style/SyncTextItem"
-        android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:text="@string/sync_subtitle_connect" />
 
     <TextView
@@ -51,10 +51,10 @@
 
         <TextView
             style="@style/SyncTextItem"
-            android:textSize="10dp"
-            android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
-            android:text="@string/sync_pair_error"/>
+            android:layout_marginBottom="10dp"
+            android:text="@string/sync_pair_tryagain"
+            android:textSize="10dp" />
     </LinearLayout>
 
     <LinearLayout
