--- a/res/layout/sync_setup_pair.xml
+++ b/res/layout/sync_setup_pair.xml
@@ -8,14 +8,11 @@
         android:text="@string/sync_title_pair" />
 
     <View
-        android:layout_width="wrap_content"
-        android:layout_height="2dp"
-        android:background="#FFFFFF" />
+       style="@style/SyncViewLine" />
 
     <TextView
         android:id="@+id/setup_subtitle"
         style="@style/SyncTextItem"
-        android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:text="@string/sync_subtitle_connect" />
 
