--- a/res/layout/sync_setup_success.xml
+++ b/res/layout/sync_setup_success.xml
@@ -5,9 +5,7 @@
         style="@style/SyncTextTitle"
         android:text="@string/sync_title_success" />
     <View
-        android:layout_width="fill_parent"
-        android:layout_height="2dp"
-        android:background="#FFFFFF" />
+        style="@style/SyncViewLine" />
 
     <TextView
         android:id="@+id/setup_success_subtitle"
