--- a/res/values/sync_styles.xml
+++ b/res/values/sync_styles.xml
@@ -16,6 +16,10 @@
     <item name="android:layout_gravity">center_vertical</item>
     <item name="android:textSize">15dp</item>
   </style>
+  <style name="SyncLinkItem" parent="SyncTextItem">
+    <item name="android:clickable">true</item>
+    <item name="android:textColor">#99CCFF</item>
+  </style>
   <style name="SyncTextTitle" parent="@style/SyncTextItem">
     <item name="android:gravity">center</item>
     <item name="android:paddingBottom">10dp</item>
