--- a/res/layout/sync_setup.xml
+++ b/res/layout/sync_setup.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/SyncTextFrame" >
+  style="@style/SyncTextFrame" >
+
+  <ScrollView
+    style="@style/SyncLayout" >
+
+    <LinearLayout
+      style="@style/SyncLayout" >
 
     <TextView
         android:id="@+id/setup_title"
@@ -53,5 +59,6 @@
             android:onClick="cancelClickHandler"
             android:text="@string/sync_button_cancel" />
     </LinearLayout>
-
+    </LinearLayout>
+  </ScrollView>
 </TableLayout>
