--- a/res/layout/sync_setup_pair.xml
+++ b/res/layout/sync_setup_pair.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/SyncTextFrame" >
-
+<ScrollView
+    style="@style/SyncLayout" >
+  <LinearLayout
+    style="@style/SyncLayout" >
     <TextView
         android:id="@+id/setup_title"
         style="@style/SyncTextTitle"
@@ -72,5 +75,6 @@
             android:enabled="false"
             android:text="@string/sync_button_connect" />
     </LinearLayout>
-
+</LinearLayout>
+</ScrollView>
 </TableLayout>
