--- a/res/layout/sync_account.xml
+++ b/res/layout/sync_account.xml
@@ -36,6 +36,7 @@
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_gravity="left"
+	    android:imeOptions="actionDone"
 	    android:text="@string/sync_checkbox_server" />
 	
 	  <EditText android:id="@+id/serverInput"
