--- a/res/layout/sync_setup_pair.xml
+++ b/res/layout/sync_setup_pair.xml
@@ -40,7 +40,8 @@
             style="@style/SyncEditPin" />
           <EditText
             android:id="@+id/pair_row3"
-            style="@style/SyncEditPin" />
+            style="@style/SyncEditPin"
+            android:imeOptions="actionDone" />
       </LinearLayout>
 
       <LinearLayout
