--- a/res/layout/sync_setup.xml
+++ b/res/layout/sync_setup.xml
@@ -54,8 +54,8 @@
           android:orientation="horizontal" >
 
           <Button
-              style="@style/SyncButtonCommon"
-              android:layout_marginTop="10dp"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
               android:onClick="cancelClickHandler"
               android:text="@string/sync_button_cancel" />
 
