--- a/res/values/sync_styles.xml
+++ b/res/values/sync_styles.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
   <style name="SyncLayout" parent="@android:style/Widget">
-    <item name="android:layout_width">wrap_content</item>
+    <item name="android:layout_width">fill_parent</item>
     <item name="android:layout_height">fill_parent</item>
     <item name="android:gravity">center</item>
     <item name="android:orientation">vertical</item>
   </style>
   <!-- TextView Styles -->
   <style name="SyncTextFrame" parent="@android:style/TextAppearance">
-    <item name="android:layout_width">wrap_content</item>
+    <item name="android:layout_width">fill_parent</item>
     <item name="android:layout_height">fill_parent</item>
     <item name="android:layout_gravity">center</item>
     <item name="android:padding">20dp</item>
     <item name="android:orientation">vertical</item>
-    <item name="android:background">#82818A</item>
   </style>
   <style name="SyncTextItem" parent="@android:style/TextAppearance.Medium">
     <item name="android:gravity">center</item>
@@ -24,7 +23,6 @@
   </style>
   <style name="SyncLinkItem" parent="SyncTextItem">
     <item name="android:clickable">true</item>
-    <item name="android:textColor">#99CCFF</item>
   </style>
   <style name="SyncTextTitle" parent="@style/SyncTextItem">
     <item name="android:gravity">center</item>
@@ -44,16 +42,6 @@
     <item name="android:maxLength">4</item>
     <item name="android:imeOptions">actionNext</item>
   </style>
-  <!-- Misc Styles -->
-  <style name="SyncButtonCommon">
-    <item name="android:layout_width">wrap_content</item>
-    <item name="android:layout_height">wrap_content</item>
-  </style>
-  <style name="SyncViewLine">
-    <item name="android:layout_width">wrap_content</item>
-    <item name="android:layout_height">2dp</item>
-    <item name="android:paddingTop">5dp</item>
-    <item name="android:paddingBottom">10dp</item>
-    <item name="android:background">#FFFFFF</item>
-  </style>
+
+  <!-- Theme Styles -->
 </resources>
