--- a/res/layout/sync_setup_failure.xml
+++ b/res/layout/sync_setup_failure.xml
@@ -1,39 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/SyncTextFrame" >
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/SyncLayout" >
+    <LinearLayout
+      android:id="@+id/failure_top"
+      style="@style/SyncTop" >
+    <ImageView
+      android:src="@drawable/sync_icon"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content" />
     <TextView
       style="@style/SyncTextTitle"
       android:text="@string/sync_title_fail" />
+    </LinearLayout>
 
     <TextView
       style="@style/SyncTextItem"
+      android:layout_below="@id/failure_top"
+      android:layout_above="@+id/failure_bottom"
+      android:padding="20dp"
       android:text="@string/sync_subtitle_fail" />
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical" >
-
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@id/failure_bottom"
+            style="@style/SyncBottom"
             android:orientation="horizontal" >
 
             <Button
-                style="buttonStyle"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:onClick="tryAgainClickHandler"
                 android:text="@string/sync_button_tryagain" />
 
             <Button
-                style="buttonStyle"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:onClick="manualClickHandler"
                 android:text="@string/sync_button_manual" />
-        </LinearLayout>
-
-        <Button
-            style="buttonStyle"
+             <Button
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
             android:onClick="cancelClickHandler"
             android:text="@string/sync_button_cancel" />
-    </LinearLayout>
+        </LinearLayout>
 
-</TableLayout>
+</RelativeLayout>
