--- a/res/layout/sync_setup_jpake_waiting.xml
+++ b/res/layout/sync_setup_jpake_waiting.xml
@@ -1,21 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/SyncTextFrame" >
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/SyncLayout" >
+    <LinearLayout
+        android:id="@+id/waiting_top"
+        style="@style/SyncTop" >
+    <ImageView
+      android:src="@drawable/sync_icon"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content" />
     <TextView
         style="@style/SyncTextTitle"
         android:text="@string/sync_title_connect" />
+    </LinearLayout>
+
     <ProgressBar
+        android:id="@+id/waiting_content1"
         style="@android:style/Widget.ProgressBar.Horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/waiting_top"
         android:indeterminateOnly="true"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp" />
     <TextView
         style="@style/SyncTextItem"
+        android:gravity="center"
+        android:layout_below="@id/waiting_content1"
         android:text="@string/sync_jpake_subtitle_waiting" />
-    <Button
-        style="buttonStyle"
+    <LinearLayout
+        style="@style/SyncBottom">
+        <Button
+        style="@style/SyncButton"
         android:onClick="cancelClickHandler"
         android:text="@string/sync_button_cancel" />
-</TableLayout>
+    </LinearLayout>
+</RelativeLayout>
