--- a/res/values/sync_styles.xml
+++ b/res/values/sync_styles.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <style name="SyncLayout" parent="@android:style/Widget">
+  <style name="SyncLayout">
     <item name="android:layout_width">fill_parent</item>
     <item name="android:layout_height">fill_parent</item>
-    <item name="android:gravity">center</item>
+  </style>
+  <style name="SyncLayout.Vertical" parent="@style/SyncLayout">
     <item name="android:orientation">vertical</item>
+  </style>
+  <style name="SyncLayout.Horizontal" parent="@style/SyncLayout">
+    <item name="android:orientation">horizontal</item>
   </style>
   <!-- TextView Styles -->
   <style name="SyncTextFrame" parent="@android:style/TextAppearance">
@@ -15,7 +19,6 @@
     <item name="android:orientation">vertical</item>
   </style>
   <style name="SyncTextItem" parent="@android:style/TextAppearance.Medium">
-    <item name="android:gravity">center</item>
     <item name="android:layout_width">fill_parent</item>
     <item name="android:layout_height">wrap_content</item>
     <item name="android:layout_gravity">center_vertical</item>
@@ -25,8 +28,8 @@
     <item name="android:clickable">true</item>
   </style>
   <style name="SyncTextTitle" parent="@style/SyncTextItem">
-    <item name="android:gravity">center</item>
-    <item name="android:paddingBottom">10dp</item>
+    <item name="android:gravity">left</item>
+    <item name="android:paddingLeft">10dp</item>
     <item name="android:textSize">20dp</item>
   </style>
   <!-- EditView Styles -->
@@ -44,4 +47,24 @@
   </style>
 
   <!-- Theme Styles -->
+  <style name="SyncTop">
+    <item name="android:layout_width">fill_parent</item>
+    <item name="android:layout_height">wrap_content</item>
+    <item name="android:gravity">left</item>
+    <item name="android:orientation">horizontal</item>
+    <item name="android:layout_alignParentTop">true</item>
+    <item name="android:background">@android:drawable/bottom_bar</item>
+  </style>
+    <style name="SyncBottom">
+    <item name="android:layout_width">fill_parent</item>
+    <item name="android:layout_height">wrap_content</item>
+    <item name="android:gravity">center</item>
+    <item name="android:layout_alignParentBottom">true</item>
+    <item name="android:background">@android:drawable/bottom_bar</item>
+  </style>
+  <style name="SyncButton" parent="@android:style/Widget.Button">
+    <item name="android:layout_width">fill_parent</item>
+    <item name="android:layout_height">wrap_content</item>
+    <item name="android:layout_weight">1</item>
+  </style>
 </resources>
