--- a/res/values/sync_themes.xml
+++ b/res/values/sync_themes.xml
@@ -2,5 +2,6 @@
 <resources>
   <style name="SyncTheme" parent="@android:style/Theme">
     <item name="android:windowNoTitle">true</item>
+    <item name="android:button">@style/SyncButton</item>
   </style>
 </resources>
