Setting theme on start of Sync setup.

--- a/res/values/sync_styles.xml
+++ b/res/values/sync_styles.xml
@@ -47,6 +47,9 @@
   </style>
 
   <!-- Theme Styles -->
+  
+  <style name="SyncTheme" parent="@android:style/Theme.NoTitleBar"/>
+  
   <style name="SyncTop">
     <item name="android:layout_width">fill_parent</item>
     <item name="android:layout_height">wrap_content</item>
