--- a/res/layout/sync_setup_nointernet.xml
+++ b/res/layout/sync_setup_nointernet.xml
@@ -5,7 +5,7 @@
     android:id="@+id/internet_top"
     style="@style/SyncTop">
     <ImageView
-      android:src="@drawable/sync_icon"
+      android:src="@drawable/sync_ic_launcher"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content" />
     <TextView
