--- a/res/layout/sync_account.xml
+++ b/res/layout/sync_account.xml
@@ -6,7 +6,7 @@
     style="@style/SyncTop">
 
     <ImageView
-      android:src="@drawable/sync_icon"
+      android:src="@drawable/sync_ic_launcher"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content" />
     <TextView
@@ -22,12 +22,13 @@
     android:layout_above="@+id/account_bottom">
 
 	<LinearLayout
-      style="@style/SyncLayout.Vertical" >
+      style="@style/SyncLayout.Vertical"
+      android:padding="20dp" >
 
 	  <TextView
 	    style="@style/SyncTextItem"
-	    android:padding="10dp"
-	    android:text="@string/sync_subtitle_account" />
+	    android:text="@string/sync_subtitle_account"
+	    android:layout_marginBottom="10dp" />
 	
 	  <EditText android:id="@+id/usernameInput"
 	    style="@style/SyncEditItem"
