--- a/res/values/sync_styles.xml
+++ b/res/values/sync_styles.xml
@@ -26,6 +26,7 @@
   </style>
   <style name="SyncLinkItem" parent="SyncTextItem">
     <item name="android:clickable">true</item>
+    <item name="android:textColor">#CCEEFF</item>
   </style>
   <style name="SyncTextTitle" parent="@style/SyncTextItem">
     <item name="android:gravity">left</item>
@@ -68,5 +69,18 @@
     <item name="android:layout_width">fill_parent</item>
     <item name="android:layout_height">wrap_content</item>
     <item name="android:layout_weight">1</item>
+  </style>
+
+  <!-- Text Display Styles -->
+  <style name="SyncPinText" parent="@android:style/Widget.TextView">
+    <item name="android:layout_width">130sp</item>
+    <item name="android:layout_height">wrap_content</item>
+    <item name="android:layout_gravity">center</item>
+    <item name="android:layout_marginBottom">5dp</item>
+    <item name="android:gravity">center</item>
+    <item name="android:background">#FFFFFF</item>
+    <item name="android:textColor">#000000</item>
+    <item name="android:textSize">35sp</item>
+    <item name="android:text">@string/sync_pin_default</item>
   </style>
 </resources>
