--- a/res/layout/sync_setup_jpake_waiting.xml
+++ b/res/layout/sync_setup_jpake_waiting.xml
@@ -16,12 +16,11 @@
   <ProgressBar
     android:id="@+id/waiting_content1"
     style="@android:style/Widget.ProgressBar.Horizontal"
-    android:layout_width="wrap_content"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_below="@id/waiting_top"
     android:indeterminateOnly="true"
-    android:layout_marginTop="10dp"
-    android:layout_marginBottom="10dp" />
+    android:layout_margin="10dp" />
   <TextView
     style="@style/SyncTextItem"
     android:gravity="center"
