--- a/res/values/sync_styles.xml
+++ b/res/values/sync_styles.xml
@@ -10,6 +10,7 @@
   <style name="SyncLayout.Horizontal" parent="@style/SyncLayout">
     <item name="android:orientation">horizontal</item>
   </style>
+
   <!-- TextView Styles -->
   <style name="SyncTextFrame" parent="@android:style/TextAppearance">
     <item name="android:layout_width">fill_parent</item>
@@ -25,12 +26,12 @@
   </style>
   <style name="SyncLinkItem" parent="SyncTextItem">
     <item name="android:clickable">true</item>
-    <item name="android:textColor">#CCEEFF</item>
+    <item name="android:textColor">#ACC4D5</item>
   </style>
   <style name="SyncTextTitle" parent="@style/SyncTextItem">
     <item name="android:layout_gravity">center_vertical</item>
+    <item name="android:paddingLeft">4dp</item>
     <item name="android:gravity">left</item>
-    <item name="android:paddingLeft">10dp</item>
     <item name="android:textSize">20dp</item>
   </style>
   <!-- EditView Styles -->
@@ -78,9 +79,16 @@
     <item name="android:layout_gravity">center</item>
     <item name="android:layout_marginBottom">5dp</item>
     <item name="android:gravity">center</item>
-    <item name="android:background">#FFFFFF</item>
-    <item name="android:textColor">#000000</item>
+    <item name="android:background">@drawable/pin_background</item>
+    <item name="android:textColor">#FFFFFF</item>
     <item name="android:textSize">35sp</item>
     <item name="android:text">@string/sync_pin_default</item>
+  </style>
+  <style name="SyncTopIcon">
+    <item name="android:src">@drawable/sync_ic_launcher</item>
+    <item name="android:layout_width">wrap_content</item>
+    <item name="android:layout_height">wrap_content</item>
+    <item name="android:paddingTop">2dp</item>
+    <item name="android:paddingLeft">4dp</item>
   </style>
 </resources>
