Bug 705767 - Part 7: incorporate account authentication feedback into UI.

--- a/res/layout/sync_account.xml
+++ b/res/layout/sync_account.xml
@@ -43,6 +43,10 @@
 	  <EditText android:id="@+id/keyInput"
 	    style="@style/SyncEditItem"
 	    android:hint="@string/sync_input_key" />
+
+	  <TextView android:id="@+id/cred_error"
+	    style="@style/SyncTextError"
+	    android:text="@string/sync_invalidcreds_label" />
 	
 	  <CheckBox android:id="@+id/checkbox_server"
 	    android:layout_width="wrap_content"
@@ -55,6 +59,10 @@
 	    style="@style/SyncEditItem"
 	    android:visibility="gone"
 	    android:hint="@string/sync_input_server" />
+
+	  <TextView android:id="@+id/server_error"
+	    style="@style/SyncTextError"
+	    android:text="@string/sync_invalidserver_label" />
 
 	</LinearLayout>
   </ScrollView>
