--- a/res/layout/sync_setup_success.xml
+++ b/res/layout/sync_setup_success.xml
@@ -20,10 +20,15 @@
 	android:text="@string/sync_subtitle_success" />
 
   <LinearLayout
-    style="@style/SyncBottom" >
+    style="@style/SyncBottom"
+    android:orientation="horizontal" >
     <Button
       style="@style/SyncButton"
       android:onClick="settingsClickHandler"
       android:text="@string/sync_settings" />
+    <Button
+      style="@style/SyncButton"
+      android:onClick="launchBrowser"
+      android:text="@string/brand_shortName" />
   </LinearLayout>
 </RelativeLayout>
