Bug 809210 - Enable/disable next button in FxAccount setup screens.

--- a/res/layout/fxaccount_setup_existing_account.xml
+++ b/res/layout/fxaccount_setup_existing_account.xml
@@ -33,6 +33,7 @@
 			android:inputType="textPassword" />
 
 		<Button
+			android:id="@+id/next"
 			style="@style/FxAccountButton"
 			android:layout_marginBottom="20dp"
 			android:onClick="onNext"
