--- a/res/layout/fxaccount_setup_new_account.xml
+++ b/res/layout/fxaccount_setup_new_account.xml
@@ -56,6 +56,7 @@
 			android:text="Learn more." />
 
 		<Button
+			android:id="@+id/next"
 			style="@style/FxAccountButton"
 			android:layout_marginBottom="20dp"
 			android:onClick="onNext"
