--- a/res/drawable/fxaccount_button_background_disabled.xml
+++ b/res/drawable/fxaccount_button_background_disabled.xml
@@ -4,8 +4,7 @@
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" android:padding="10dp">
-  <!-- you can use any color you want I used here gray color-->
-  <solid android:color="#bac2ca" />
+  <solid android:color="#e6e9ec" />
   <corners
       android:radius="6dp" />
 </shape>
