Bug 809210 - Locate next button, progress bar, and error view at same space.
Adds state and switches between subviews using setVisibility.
Subviews are contained in a FrameLayout, which automatically takes the
largest (visible or invisible) subview size.

--- a/res/layout/fxaccount_setup_new_account.xml
+++ b/res/layout/fxaccount_setup_new_account.xml
@@ -55,21 +55,34 @@
 			android:gravity="center_horizontal"
 			android:text="Learn more." />
 
-		<TextView
-			android:id="@+id/error"
-			style="@style/FxAccountErrorTextItem"
+
+		<FrameLayout
 			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
-			android:layout_marginBottom="20dp"
-			android:visibility="gone" />
+			android:layout_height="wrap_content" >
 
-		<Button
-			android:id="@+id/next"
-			style="@style/FxAccountButton"
-			android:drawableRight="@android:drawable/ic_popup_sync"
-			android:onClick="onNext"
-			android:text="Next" />
+			<Button
+				android:id="@+id/next"
+				style="@style/FxAccountButton"
+				android:layout_width="fill_parent"
+				android:layout_height="fill_parent"
+				android:onClick="onNext"
+				android:text="Next"
+				android:visibility="visible" />
 
+			<ProgressBar
+				android:id="@+id/progress"
+				android:layout_width="fill_parent"
+				android:layout_height="fill_parent"
+				android:background="@drawable/fxaccount_button_background"
+				android:visibility="invisible" />
+
+			<TextView
+				android:id="@+id/error"
+				style="@style/FxAccountErrorTextItem"
+				android:layout_width="fill_parent"
+				android:layout_height="fill_parent"
+				android:visibility="invisible" />
+		</FrameLayout>
 	</LinearLayout>
 
 </ScrollView>
